# vv/testdata/api/gen/dummy.pb.go
@@ -125,6 +125,108 @@ func (x *EchoResp) GetAck() bool {
 	return false
 }
 
+type UploadReq struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	FileName string `protobuf:"bytes,1,opt,name=file_name,json=fileName,proto3" json:"file_name,omitempty"`
+	Raw      []byte `protobuf:"bytes,2,opt,name=raw,proto3" json:"raw,omitempty"`
+}
+
+func (x *UploadReq) Reset() {
+	*x = UploadReq{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_dummy_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *UploadReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UploadReq) ProtoMessage() {}
+
+func (x *UploadReq) ProtoReflect() protoreflect.Message {
+	mi := &file_dummy_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UploadReq.ProtoReflect.Descriptor instead.
+func (*UploadReq) Descriptor() ([]byte, []int) {
+	return file_dummy_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *UploadReq) GetFileName() string {
+	if x != nil {
+		return x.FileName
+	}
+	return ""
+}
+
+func (x *UploadReq) GetRaw() []byte {
+	if x != nil {
+		return x.Raw
+	}
+	return nil
+}
+
+type UploadResp struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Digest string `protobuf:"bytes,1,opt,name=digest,proto3" json:"digest,omitempty"`
+}
+
+func (x *UploadResp) Reset() {
+	*x = UploadResp{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_dummy_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *UploadResp) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UploadResp) ProtoMessage() {}
+
+func (x *UploadResp) ProtoReflect() protoreflect.Message {
+	mi := &file_dummy_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UploadResp.ProtoReflect.Descriptor instead.
+func (*UploadResp) Descriptor() ([]byte, []int) {
+	return file_dummy_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *UploadResp) GetDigest() string {
+	if x != nil {
+		return x.Digest
+	}
+	return ""
+}
+
 var File_dummy_proto protoreflect.FileDescriptor
 
 var file_dummy_proto_rawDesc = []byte{
@@ -140,24 +242,39 @@ var file_dummy_proto_rawDesc = []byte{
 	0x73, 0x73, 0x61, 0x67, 0x65, 0x22, 0x36, 0x0a, 0x08, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x73,
 	0x70, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x01, 0x20, 0x01,
 	0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x61,
-	0x63, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x08, 0x52, 0x03, 0x61, 0x63, 0x6b, 0x32, 0xef, 0x01,
-	0x0a, 0x0c, 0x44, 0x75, 0x6d, 0x6d, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x67,
-	0x0a, 0x04, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45,
-	0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45,
-	0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x3e, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64,
-	0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f,
-	0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69,
-	0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f, 0x64, 0x75, 0x6d,
-	0x6d, 0x79, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x12, 0x76, 0x0a, 0x0a, 0x53, 0x74, 0x72, 0x65, 0x61,
-	0x6d, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
-	0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
-	0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x45, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75,
-	0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73,
-	0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69, 0x73,
-	0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x64, 0x75, 0x6d, 0x6d,
-	0x79, 0x2f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x30, 0x01, 0x42,
-	0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x3b, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x62, 0x06, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x33,
+	0x63, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x08, 0x52, 0x03, 0x61, 0x63, 0x6b, 0x22, 0x4c, 0x0a,
+	0x09, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x71, 0x12, 0x25, 0x0a, 0x09, 0x66, 0x69,
+	0x6c, 0x65, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x08, 0xc2,
+	0xb6, 0x24, 0x04, 0x08, 0x01, 0x28, 0x1e, 0x52, 0x08, 0x66, 0x69, 0x6c, 0x65, 0x4e, 0x61, 0x6d,
+	0x65, 0x12, 0x18, 0x0a, 0x03, 0x72, 0x61, 0x77, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0c, 0x42, 0x06,
+	0xc2, 0xb6, 0x24, 0x02, 0x08, 0x01, 0x52, 0x03, 0x72, 0x61, 0x77, 0x22, 0x24, 0x0a, 0x0a, 0x55,
+	0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x73, 0x70, 0x12, 0x16, 0x0a, 0x06, 0x64, 0x69, 0x67,
+	0x65, 0x73, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x64, 0x69, 0x67, 0x65, 0x73,
+	0x74, 0x32, 0xf2, 0x02, 0x0a, 0x0c, 0x44, 0x75, 0x6d, 0x6d, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x12, 0x67, 0x0a, 0x04, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x3e, 0xa2, 0xb0, 0x24,
+	0x27, 0x0a, 0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75,
+	0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f,
+	0x69, 0x70, 0x6c, 0x69, 0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b,
+	0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x12, 0x76, 0x0a, 0x0a, 0x53,
+	0x74, 0x72, 0x65, 0x61, 0x6d, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d,
+	0x79, 0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d,
+	0x79, 0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x45, 0xa2, 0xb0, 0x24, 0x27,
+	0x0a, 0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69,
+	0x70, 0x6c, 0x69, 0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f,
+	0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x65, 0x63, 0x68,
+	0x6f, 0x30, 0x01, 0x12, 0x80, 0x01, 0x0a, 0x06, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x12, 0x10,
+	0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x71,
+	0x1a, 0x11, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52,
+	0x65, 0x73, 0x70, 0x22, 0x51, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79,
+	0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e,
+	0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69, 0x73, 0x74, 0x20, 0x01,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x20, 0x22, 0x19, 0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x75,
+	0x70, 0x6c, 0x6f, 0x61, 0x64, 0x2f, 0x7b, 0x66, 0x69, 0x6c, 0x65, 0x5f, 0x6e, 0x61, 0x6d, 0x65,
+	0x7d, 0x3a, 0x03, 0x72, 0x61, 0x77, 0x42, 0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x3b, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -172,18 +289,22 @@ func file_dummy_proto_rawDescGZIP() []byte {
 	return file_dummy_proto_rawDescData
 }
 
-var file_dummy_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_dummy_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_dummy_proto_goTypes = []interface{}{
-	(*EchoReq)(nil),  // 0: dummy.EchoReq
-	(*EchoResp)(nil), // 1: dummy.EchoResp
+	(*EchoReq)(nil),    // 0: dummy.EchoReq
+	(*EchoResp)(nil),   // 1: dummy.EchoResp
+	(*UploadReq)(nil),  // 2: dummy.UploadReq
+	(*UploadResp)(nil), // 3: dummy.UploadResp
 }
 var file_dummy_proto_depIdxs = []int32{
 	0, // 0: dummy.DummyService.Echo:input_type -> dummy.EchoReq
 	0, // 1: dummy.DummyService.StreamEcho:input_type -> dummy.EchoReq
-	1, // 2: dummy.DummyService.Echo:output_type -> dummy.EchoResp
-	1, // 3: dummy.DummyService.StreamEcho:output_type -> dummy.EchoResp
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
+	2, // 2: dummy.DummyService.Upload:input_type -> dummy.UploadReq
+	1, // 3: dummy.DummyService.Echo:output_type -> dummy.EchoResp
+	1, // 4: dummy.DummyService.StreamEcho:output_type -> dummy.EchoResp
+	3, // 5: dummy.DummyService.Upload:output_type -> dummy.UploadResp
+	3, // [3:6] is the sub-list for method output_type
+	0, // [0:3] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -219,6 +340,30 @@ func file_dummy_proto_init() {
 				return nil
 			}
 		}
+		file_dummy_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*UploadReq); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_dummy_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*UploadResp); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -226,7 +371,7 @@ func file_dummy_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_dummy_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
